Opened 11 years ago

Closed 11 years ago

#10189 closed bug (fixed)

Progress of dependencies isn't set to "active" after installation

Reported by: waddlesplash Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/HaikuDepot Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

  1. Select a package that has dependencies that haven't been installed (e.g. "liblayout-devel" when "liblayout" hasn't been installed)
  2. Click "install", and click through the "other packages must be installed".
  3. The status for the dependency package will switch to progress, and then stop updating at some progress level. The other package will then progress up to full and then become "active". The dependency package will continue remaining stuck at some intermediate progress level.

Change History (2)

comment:1 by anevilyak, 11 years ago

Owner: changed from stippi to anevilyak
Status: newin-progress

comment:2 by anevilyak, 11 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev46352.

Note: See TracTickets for help on using tickets.