src/apps/haiku-depot/PackageAction.cpp
@@ -8,6 +8,7 @@
 
 #include "PackageAction.h"
 
+#include "Model.h"
 #include "PackageManager.h"
 
 
@@ -44,4 +45,23 @@ PackageAction::~PackageAction()
 	delete fPackageManager;
 }
 
+
+PackageInfoRef
+PackageAction::FindPackageByName(const BString& name)
+{
+	Model* model = GetModel();
+	const DepotList& depots = model->Depots();
+	// TODO: optimize!
+	for (int32 i = 0; i < depots.CountItems(); i++) {
+		const DepotInfo& depot = depots.ItemAtFast(i);
+		const PackageList& packages = depot.Packages();
+		for (int32 j = 0; j < packages.CountItems(); j++) {
+			PackageInfoRef info = packages.ItemAtFast(j);
+			if (info->Title() == name)
+				return info;
+		}
+	}
+
+	return PackageInfoRef();
+}
 
